# llm-zoomcamp-2026-homework

./: .gitignore  README.md  pyproject.toml
01-agentic-rag/: README.md  hw1.py  hw1_answers.md
02-vector-search/: README.md  download.py  hw2.py  hw2_answers.md
03-orchestration/: README.md  hw3_answers.md
04-evaluation/: README.md  hw4.py  hw4_answers.md
05-monitoring/: README.md  hw5.py  hw5_answers.md
workshops/dlt/: .env.example  README.md  analyze.py  dlt_answers.md  logfire_pipeline.py  main.py
