[project]
name = "llm-zoomcamp-2026-homework"
version = "0.1.0"
description = "Homework submissions for DataTalks.Club LLM Zoomcamp 2026"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitsource>=0.0.5",
    "huggingface-hub>=1.20.1",
    "minsearch>=0.1.0",
    "numpy>=2.0.0",
    "onnxruntime>=1.23.2",
    "openai>=2.41.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.1",
]
